# crewai-trip-planner-agent-ollama

./: agents.py  pyproject.toml  tasks.py
tools/: calculator_tools.py
